list alignment fix

--- a/src/app/items/item-list/item-list.component.scss
+++ b/src/app/items/item-list/item-list.component.scss
@@ -11,7 +11,7 @@
   padding-bottom: 10px;
 
   .actions {
-    text-align: center;
+    text-align: right;
 
     @media(max-width: 768px) {
       text-align: left;
