--- a/src/app/items/item/item.component.scss
+++ b/src/app/items/item/item.component.scss
@@ -6,3 +6,7 @@
 .actions > .btn ~ .btn {
   margin-right: 10px;
 }
+
+.actions > .btn {
+  float: right;
+}
